--- a/Drug Deliverance.ipynb
+++ b/Drug Deliverance.ipynb
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {
     "scrolled": true
    },
@@ -366,134 +366,134 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/60\n",
-      "40/40 [==============================] - 0s 698us/step - loss: 3.9368 - accuracy: 0.1169\n",
+      "40/40 [==============================] - 0s 773us/step - loss: 3.9289 - accuracy: 0.1177\n",
       "Epoch 2/60\n",
-      "40/40 [==============================] - 0s 923us/step - loss: 3.8403 - accuracy: 0.1377\n",
+      "40/40 [==============================] - 0s 698us/step - loss: 3.8143 - accuracy: 0.1345\n",
       "Epoch 3/60\n",
-      "40/40 [==============================] - 0s 916us/step - loss: 3.7478 - accuracy: 0.1449\n",
+      "40/40 [==============================] - 0s 723us/step - loss: 3.7080 - accuracy: 0.1449\n",
       "Epoch 4/60\n",
-      "40/40 [==============================] - 0s 785us/step - loss: 3.6542 - accuracy: 0.1449\n",
+      "40/40 [==============================] - 0s 848us/step - loss: 3.5845 - accuracy: 0.1377\n",
       "Epoch 5/60\n",
-      "40/40 [==============================] - 0s 639us/step - loss: 3.5259 - accuracy: 0.1449\n",
+      "40/40 [==============================] - 0s 748us/step - loss: 3.4532 - accuracy: 0.1449\n",
       "Epoch 6/60\n",
-      "40/40 [==============================] - 0s 898us/step - loss: 3.4276 - accuracy: 0.1393\n",
+      "40/40 [==============================] - 0s 798us/step - loss: 3.3980 - accuracy: 0.1449\n",
       "Epoch 7/60\n",
-      "40/40 [==============================] - 0s 848us/step - loss: 3.3922 - accuracy: 0.1361\n",
+      "40/40 [==============================] - 0s 748us/step - loss: 3.3805 - accuracy: 0.1449\n",
       "Epoch 8/60\n",
-      "40/40 [==============================] - ETA: 0s - loss: 3.3278 - accuracy: 0.12 - 0s 939us/step - loss: 3.3810 - accuracy: 0.1449\n",
+      "40/40 [==============================] - 0s 798us/step - loss: 3.3768 - accuracy: 0.1449\n",
       "Epoch 9/60\n",
-      "40/40 [==============================] - 0s 958us/step - loss: 3.3768 - accuracy: 0.1385\n",
+      "40/40 [==============================] - 0s 748us/step - loss: 3.3744 - accuracy: 0.1369\n",
       "Epoch 10/60\n",
-      "40/40 [==============================] - 0s 806us/step - loss: 3.3775 - accuracy: 0.1369\n",
+      "40/40 [==============================] - 0s 748us/step - loss: 3.3760 - accuracy: 0.1369\n",
       "Epoch 11/60\n",
-      "40/40 [==============================] - 0s 853us/step - loss: 3.3706 - accuracy: 0.1425\n",
+      "40/40 [==============================] - 0s 748us/step - loss: 3.3736 - accuracy: 0.1369\n",
       "Epoch 12/60\n",
-      "40/40 [==============================] - 0s 748us/step - loss: 3.3718 - accuracy: 0.1449\n",
+      "40/40 [==============================] - 0s 817us/step - loss: 3.3716 - accuracy: 0.1361\n",
       "Epoch 13/60\n",
-      "40/40 [==============================] - 0s 698us/step - loss: 3.3705 - accuracy: 0.1449\n",
+      "40/40 [==============================] - 0s 748us/step - loss: 3.3743 - accuracy: 0.1321\n",
       "Epoch 14/60\n",
-      "40/40 [==============================] - 0s 748us/step - loss: 3.3691 - accuracy: 0.1393\n",
+      "40/40 [==============================] - 0s 748us/step - loss: 3.3698 - accuracy: 0.1449\n",
       "Epoch 15/60\n",
-      "40/40 [==============================] - 0s 873us/step - loss: 3.3700 - accuracy: 0.1441\n",
+      "40/40 [==============================] - 0s 773us/step - loss: 3.3700 - accuracy: 0.1449\n",
       "Epoch 16/60\n",
-      "40/40 [==============================] - 0s 598us/step - loss: 3.3678 - accuracy: 0.1449\n",
+      "40/40 [==============================] - 0s 748us/step - loss: 3.3695 - accuracy: 0.1329\n",
       "Epoch 17/60\n",
-      "40/40 [==============================] - 0s 823us/step - loss: 3.3689 - accuracy: 0.1449\n",
+      "40/40 [==============================] - 0s 773us/step - loss: 3.3705 - accuracy: 0.1449\n",
       "Epoch 18/60\n",
-      "40/40 [==============================] - 0s 824us/step - loss: 3.3670 - accuracy: 0.1449\n",
+      "40/40 [==============================] - 0s 972us/step - loss: 3.3709 - accuracy: 0.1449\n",
       "Epoch 19/60\n",
-      "40/40 [==============================] - 0s 748us/step - loss: 3.3669 - accuracy: 0.1449\n",
+      "40/40 [==============================] - 0s 898us/step - loss: 3.3696 - accuracy: 0.1393\n",
       "Epoch 20/60\n",
-      "40/40 [==============================] - 0s 823us/step - loss: 3.3666 - accuracy: 0.1449\n",
+      "40/40 [==============================] - 0s 923us/step - loss: 3.3694 - accuracy: 0.1337\n",
       "Epoch 21/60\n",
-      "40/40 [==============================] - 0s 848us/step - loss: 3.3668 - accuracy: 0.1417\n",
+      "40/40 [==============================] - 0s 997us/step - loss: 3.3677 - accuracy: 0.1449\n",
       "Epoch 22/60\n",
-      "40/40 [==============================] - 0s 798us/step - loss: 3.3661 - accuracy: 0.1369\n",
+      "40/40 [==============================] - 0s 898us/step - loss: 3.3678 - accuracy: 0.1417\n",
       "Epoch 23/60\n",
-      "40/40 [==============================] - 0s 773us/step - loss: 3.3658 - accuracy: 0.1449\n",
+      "40/40 [==============================] - 0s 947us/step - loss: 3.3674 - accuracy: 0.1449\n",
       "Epoch 24/60\n",
-      "40/40 [==============================] - 0s 634us/step - loss: 3.3671 - accuracy: 0.1377\n",
+      "40/40 [==============================] - 0s 748us/step - loss: 3.3673 - accuracy: 0.1449\n",
       "Epoch 25/60\n",
-      "40/40 [==============================] - 0s 789us/step - loss: 3.3680 - accuracy: 0.1345\n",
+      "40/40 [==============================] - 0s 698us/step - loss: 3.3675 - accuracy: 0.1393\n",
       "Epoch 26/60\n",
-      "40/40 [==============================] - 0s 723us/step - loss: 3.3662 - accuracy: 0.1433\n",
+      "40/40 [==============================] - 0s 773us/step - loss: 3.3651 - accuracy: 0.1449\n",
       "Epoch 27/60\n",
-      "40/40 [==============================] - 0s 773us/step - loss: 3.3671 - accuracy: 0.1377\n",
+      "40/40 [==============================] - 0s 798us/step - loss: 3.3683 - accuracy: 0.1449\n",
       "Epoch 28/60\n",
-      "40/40 [==============================] - 0s 623us/step - loss: 3.3686 - accuracy: 0.1449\n",
+      "40/40 [==============================] - 0s 798us/step - loss: 3.3681 - accuracy: 0.1449\n",
       "Epoch 29/60\n",
-      "40/40 [==============================] - 0s 798us/step - loss: 3.3680 - accuracy: 0.1449\n",
+      "40/40 [==============================] - 0s 848us/step - loss: 3.3656 - accuracy: 0.1449\n",
       "Epoch 30/60\n",
-      "40/40 [==============================] - 0s 723us/step - loss: 3.3658 - accuracy: 0.1449\n",
+      "40/40 [==============================] - 0s 823us/step - loss: 3.3683 - accuracy: 0.1449\n",
       "Epoch 31/60\n",
-      "40/40 [==============================] - 0s 748us/step - loss: 3.3666 - accuracy: 0.1449\n",
+      "40/40 [==============================] - 0s 848us/step - loss: 3.3673 - accuracy: 0.1449\n",
       "Epoch 32/60\n",
-      "40/40 [==============================] - 0s 698us/step - loss: 3.3647 - accuracy: 0.1449\n",
+      "40/40 [==============================] - 0s 885us/step - loss: 3.3648 - accuracy: 0.1449\n",
       "Epoch 33/60\n",
-      "40/40 [==============================] - 0s 798us/step - loss: 3.3648 - accuracy: 0.1449\n",
+      "40/40 [==============================] - 0s 748us/step - loss: 3.3647 - accuracy: 0.1449\n",
       "Epoch 34/60\n",
-      "40/40 [==============================] - 0s 723us/step - loss: 3.3658 - accuracy: 0.1425\n",
+      "40/40 [==============================] - 0s 698us/step - loss: 3.3657 - accuracy: 0.1449\n",
       "Epoch 35/60\n",
-      "40/40 [==============================] - 0s 723us/step - loss: 3.3654 - accuracy: 0.1449\n",
+      "40/40 [==============================] - 0s 773us/step - loss: 3.3660 - accuracy: 0.1449\n",
       "Epoch 36/60\n",
-      "40/40 [==============================] - 0s 947us/step - loss: 3.3648 - accuracy: 0.1449\n",
+      "40/40 [==============================] - 0s 773us/step - loss: 3.3654 - accuracy: 0.1449\n",
       "Epoch 37/60\n",
-      "40/40 [==============================] - 0s 740us/step - loss: 3.3651 - accuracy: 0.1449\n",
+      "40/40 [==============================] - 0s 773us/step - loss: 3.3667 - accuracy: 0.1393\n",
       "Epoch 38/60\n",
-      "40/40 [==============================] - 0s 754us/step - loss: 3.3652 - accuracy: 0.1393\n",
+      "40/40 [==============================] - 0s 748us/step - loss: 3.3658 - accuracy: 0.1449\n",
       "Epoch 39/60\n",
-      "40/40 [==============================] - 0s 848us/step - loss: 3.3643 - accuracy: 0.1393\n",
+      "40/40 [==============================] - 0s 757us/step - loss: 3.3646 - accuracy: 0.1449\n",
       "Epoch 40/60\n",
-      "40/40 [==============================] - 0s 1ms/step - loss: 3.3641 - accuracy: 0.1401\n",
+      "40/40 [==============================] - 0s 748us/step - loss: 3.3659 - accuracy: 0.1449\n",
       "Epoch 41/60\n",
-      "40/40 [==============================] - 0s 673us/step - loss: 3.3662 - accuracy: 0.1449\n",
+      "40/40 [==============================] - 0s 873us/step - loss: 3.3660 - accuracy: 0.1449\n",
       "Epoch 42/60\n",
-      "40/40 [==============================] - 0s 824us/step - loss: 3.3676 - accuracy: 0.1449\n",
+      "40/40 [==============================] - 0s 748us/step - loss: 3.3663 - accuracy: 0.1449\n",
       "Epoch 43/60\n",
-      "40/40 [==============================] - 0s 846us/step - loss: 3.3690 - accuracy: 0.1449\n",
+      "40/40 [==============================] - 0s 798us/step - loss: 3.3669 - accuracy: 0.1449\n",
       "Epoch 44/60\n",
-      "40/40 [==============================] - 0s 748us/step - loss: 3.3644 - accuracy: 0.1449\n",
+      "40/40 [==============================] - 0s 823us/step - loss: 3.3653 - accuracy: 0.1449\n",
       "Epoch 45/60\n",
-      "40/40 [==============================] - 0s 871us/step - loss: 3.3643 - accuracy: 0.1449\n",
+      "40/40 [==============================] - 0s 773us/step - loss: 3.3649 - accuracy: 0.1449\n",
       "Epoch 46/60\n",
-      "40/40 [==============================] - 0s 773us/step - loss: 3.3670 - accuracy: 0.1361\n",
+      "40/40 [==============================] - 0s 838us/step - loss: 3.3646 - accuracy: 0.1433\n",
       "Epoch 47/60\n",
-      "40/40 [==============================] - 0s 873us/step - loss: 3.3653 - accuracy: 0.1361\n",
+      "40/40 [==============================] - 0s 773us/step - loss: 3.3693 - accuracy: 0.1393\n",
       "Epoch 48/60\n",
-      "40/40 [==============================] - 0s 723us/step - loss: 3.3643 - accuracy: 0.1425\n",
+      "40/40 [==============================] - 0s 798us/step - loss: 3.3648 - accuracy: 0.1377\n",
       "Epoch 49/60\n",
-      "40/40 [==============================] - 0s 723us/step - loss: 3.3643 - accuracy: 0.1425\n",
+      "40/40 [==============================] - 0s 796us/step - loss: 3.3649 - accuracy: 0.1449\n",
       "Epoch 50/60\n",
-      "40/40 [==============================] - 0s 673us/step - loss: 3.3647 - accuracy: 0.1449\n",
+      "40/40 [==============================] - 0s 798us/step - loss: 3.3652 - accuracy: 0.1449\n",
       "Epoch 51/60\n",
-      "40/40 [==============================] - 0s 648us/step - loss: 3.3646 - accuracy: 0.1449\n",
+      "40/40 [==============================] - 0s 823us/step - loss: 3.3650 - accuracy: 0.1449\n",
       "Epoch 52/60\n",
-      "40/40 [==============================] - 0s 748us/step - loss: 3.3647 - accuracy: 0.1449\n",
+      "40/40 [==============================] - 0s 738us/step - loss: 3.3649 - accuracy: 0.1449\n",
       "Epoch 53/60\n",
-      "40/40 [==============================] - 0s 648us/step - loss: 3.3640 - accuracy: 0.1449\n",
+      "40/40 [==============================] - 0s 748us/step - loss: 3.3661 - accuracy: 0.1449\n",
       "Epoch 54/60\n",
-      "40/40 [==============================] - 0s 598us/step - loss: 3.3640 - accuracy: 0.1449\n",
+      "40/40 [==============================] - 0s 798us/step - loss: 3.3632 - accuracy: 0.1449\n",
       "Epoch 55/60\n",
-      "40/40 [==============================] - 0s 748us/step - loss: 3.3647 - accuracy: 0.1449\n",
+      "40/40 [==============================] - 0s 748us/step - loss: 3.3651 - accuracy: 0.1449\n",
       "Epoch 56/60\n",
-      "40/40 [==============================] - 0s 773us/step - loss: 3.3657 - accuracy: 0.1385\n",
+      "40/40 [==============================] - 0s 748us/step - loss: 3.3647 - accuracy: 0.1449\n",
       "Epoch 57/60\n",
-      "40/40 [==============================] - 0s 623us/step - loss: 3.3640 - accuracy: 0.1401\n",
+      "40/40 [==============================] - 0s 798us/step - loss: 3.3654 - accuracy: 0.1345\n",
       "Epoch 58/60\n",
-      "40/40 [==============================] - 0s 848us/step - loss: 3.3642 - accuracy: 0.1369\n",
+      "40/40 [==============================] - 0s 773us/step - loss: 3.3658 - accuracy: 0.1377\n",
       "Epoch 59/60\n",
-      "40/40 [==============================] - 0s 798us/step - loss: 3.3655 - accuracy: 0.1449\n",
+      "40/40 [==============================] - 0s 748us/step - loss: 3.3644 - accuracy: 0.1449\n",
       "Epoch 60/60\n",
-      "40/40 [==============================] - 0s 714us/step - loss: 3.3649 - accuracy: 0.1449\n"
+      "40/40 [==============================] - 0s 748us/step - loss: 3.3640 - accuracy: 0.1449\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<tensorflow.python.keras.callbacks.History at 0x1a4e2e14fd0>"
+       "<tensorflow.python.keras.callbacks.History at 0x1d0eb835710>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -511,15 +511,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "14/14 - 0s - loss: 3.3184 - accuracy: 0.1511\n",
-      "Normal Neural Network - Loss: 3.3183681964874268, Accuracy: 0.15107913315296173\n"
+      "14/14 - 0s - loss: 3.3288 - accuracy: 0.1511\n",
+      "Normal Neural Network - Loss: 3.3287711143493652, Accuracy: 0.15107913315296173\n"
      ]
     }
    ],
@@ -533,14 +533,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WARNING:tensorflow:From <ipython-input-15-4db8b0f5c0b2>:1: Sequential.predict_classes (from tensorflow.python.keras.engine.sequential) is deprecated and will be removed after 2021-01-01.\n",
+      "WARNING:tensorflow:From <ipython-input-12-4db8b0f5c0b2>:1: Sequential.predict_classes (from tensorflow.python.keras.engine.sequential) is deprecated and will be removed after 2021-01-01.\n",
       "Instructions for updating:\n",
       "Please use instead:* `np.argmax(model.predict(x), axis=-1)`,   if your model does multi-class classification   (e.g. if it uses a `softmax` last-layer activation).* `(model.predict(x) > 0.5).astype(\"int32\")`,   if your model does binary classification   (e.g. if it uses a `sigmoid` last-layer activation).\n"
      ]
@@ -553,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
